force-app/main/default/objects/MemberPlan__c/MemberPlan__c.object-meta.xml
<CustomObject>
    <label>Member Plan</label>
    <pluralLabel>Member Plans</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Member Plan Name</label>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject> 