force-app/main/default/objects/MemberPlan__c/fields/EffectiveFrom__c.field-meta.xml
<CustomField>
    <fullName>EffectiveFrom__c</fullName>
    <label>Effective From</label>
    <required>true</required>
    <type>Date</type>
</CustomField> 