force-app/main/default/objects/MemberPlan__c/fields/EffectiveTo__c.field-meta.xml
<CustomField>
    <fullName>EffectiveTo__c</fullName>
    <label>Effective To</label>
    <required>true</required>
    <type>Date</type>
</CustomField> 