force-app/main/default/objects/MemberPlan__c/fields/GroupNumber__c.field-meta.xml
<CustomField>
    <fullName>GroupNumber__c</fullName>
    <label>Group Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField> 