force-app/main/default/objects/MemberPlan__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <label>Member</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Member Plans</relationshipLabel>
    <relationshipName>MemberPlans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField> 