force-app/main/default/objects/MemberPlan__c/fields/MemberNumber__c.field-meta.xml
<CustomField>
    <fullName>MemberNumber__c</fullName>
    <label>Member Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField> 