force-app/main/default/objects/MemberPlan__c/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <label>Payer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Member Plans (Payer)</relationshipLabel>
    <relationshipName>MemberPlansAsPayer</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField> 