force-app/main/default/objects/MemberPlan__c/fields/Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Subscriber__c</fullName>
    <label>Subscriber</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Member Plans (Subscriber)</relationshipLabel>
    <relationshipName>MemberPlansAsSubscriber</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField> 