force-app/main/default/objects/MemberPlan__c/fields/SubscriberId__c.field-meta.xml
<CustomField>
    <fullName>SubscriberId__c</fullName>
    <label>Subscriber ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField> 